[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
cpp_interop = { path = "../cpp_interop" }
mlua = { version = "0.10.3", features = ["luau"] }
luau = { path = "../luau" }
once_cell = "1.20.3"
parking_lot = "0.12"
zstd = "0.13"
xxhash-rust = { version = "0.8", features = ["xxh32"] }
interprocess = "2.2"
vtable-rs = "0.1"
cxx = "1.0.158"

[dependencies.windows]
version = "0.*"
features = [
    "Win32_System_LibraryLoader",
]
