[package]
name = "module"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# base = { path = "../base" }

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
